# CODIGO_LIMPIO_PROYECTO

./: README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
src/ferreteria/: exceptions.py  models.py  services.py  storage.py
tests/: test_services.py
