[project]
name = "ferreteria-inventario"
version = "0.1.0"
description = "Sistema de inventario y ventas para ferretería"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "rich>=14.0.0",
    "ruff>=0.5.0",
    "typer>=0.12.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
